Add token creation functionality, put all endpoints behind auth, fix sensor detail methods (#74)
* Add token creation functionality

* Add endpoints to get and delete keys

* Update endpoints and db functionality

* Update openapi spec

* Add comments to the new endpoints

* Put all endpoints behind auth

* Setup weather endpoints to use zipcode

* Fix some auth stuff, rework sensor details query to use standard RTK query

* Fix linting errors

* Fix more lint errors

* Remove clear-text logging of password
